force-app/main/default/objects/Chiffre_affaire__c/Chiffre_affaire__c.object-meta.xml
<CustomObject>
    <label>Chiffre d&apos;affaire</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chiffre d&apos;affaire</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>