force-app/main/default/objects/Chiffre_affaire__c/fields/Convention__c.field-meta.xml
<CustomField>
    <fullName>Convention__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Convention</label>
    <referenceTo>Convention__c</referenceTo>
    <relationshipLabel>Chiffre d&apos;affaire</relationshipLabel>
    <relationshipName>Chiffre_affaire</relationshipName>
    <type>Lookup</type>
</CustomField>