force-app/main/default/objects/Chiffre_affaire__c/fields/Informations_complementaires__c.field-meta.xml
<CustomField>
    <fullName>Informations_complementaires__c</fullName>
    <label>Informations complémentaires</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>