force-app/main/default/objects/Chiffre_affaire__c/fields/Mois_paiement__c.field-meta.xml
<CustomField>
    <fullName>Mois_paiement__c</fullName>
    <label>Mois de paiement</label>
    <type>Date</type>
</CustomField>