force-app/main/default/objects/Chiffre_affaire__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <formula>IF(
    Somme_commissions__c &gt;= Convention__r.Montant_declenchement_palier4__c,
    Somme_commissions__c * Convention__r.Pourcentage_remuneration_palier4__c,
    IF(
        Somme_commissions__c &gt;= Convention__r.Montant_declenchement_palier3__c,
        Somme_commissions__c * Convention__r.Pourcentage_remuneration_palier3__c,
        IF(
            Somme_commissions__c &gt;= Convention__r.Montant_declenchement_palier2__c,
            Somme_commissions__c * Convention__r.Pourcentage_remuneration_palier2__c,
            IF(
                Somme_commissions__c &gt;= Convention__r.Montant_declenchement_palier1__c,
                Somme_commissions__c * Convention__r.Pourcentage_remuneration_palier1__c,
                0
            )
        )
    )
)</formula>
    <label>Montant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>