force-app/main/default/objects/Chiffre_affaire__c/fields/Palier_atteint__c.field-meta.xml
<CustomField>
    <fullName>Palier_atteint__c</fullName>
    <formula>IF(
    Somme_commissions__c &gt;= Convention__r.Montant_declenchement_palier4__c,
    Convention__r.Pourcentage_remuneration_palier4__c,
    IF(
        Somme_commissions__c &gt;= Convention__r.Montant_declenchement_palier3__c,
        Convention__r.Pourcentage_remuneration_palier3__c,
        IF(
            Somme_commissions__c &gt;= Convention__r.Montant_declenchement_palier2__c,
            Convention__r.Pourcentage_remuneration_palier2__c,
            IF(
                Somme_commissions__c &gt;= Convention__r.Montant_declenchement_palier1__c,
                Convention__r.Pourcentage_remuneration_palier1__c,
                0
            )
        )
    )
)</formula>
    <label>Palier atteint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>