force-app/main/default/objects/Chiffre_affaire__c/fields/Partenaire__c.field-meta.xml
<CustomField>
    <fullName>Partenaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partenaire</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Vous ne pouvez insérer que des partenaires</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Account Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chiffre d&apos;affaire</relationshipLabel>
    <relationshipName>Chiffre_d_affaire</relationshipName>
    <type>Lookup</type>
</CustomField>