force-app/main/default/objects/Chiffre_affaire__c/fields/Somme_commissions__c.field-meta.xml
<CustomField>
    <fullName>Somme_commissions__c</fullName>
    <label>Somme des commissions</label>
    <summarizedField>Commission__c.Montant__c</summarizedField>
    <summaryForeignKey>Commission__c.Chiffre_affaire__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>